--- a/Front/final-project/src/app/views/app/checkout/checkout.component.html
+++ b/Front/final-project/src/app/views/app/checkout/checkout.component.html
@@ -80,7 +80,7 @@
                         <span>VISA / MASTERCARD</span>
                     </a> -->
                 </div>
-                <a href="#" class="btn btn-pink">Ödəniş Et</a>
+                <button type="submit" (click)="sale()" href="#" class="btn btn-pink">Ödəniş Et</button>
             </div>
         </div>
     </div>
