User OrderList created

--- a/Front/final-project/src/app/views/app/account/orders/orders.component.html
+++ b/Front/final-project/src/app/views/app/account/orders/orders.component.html
@@ -1,1 +1,11 @@
-<p>orders works!</p>
+<app-breadcrumb [title]=" 'Sifarişlər' "></app-breadcrumb>
+<section id="order">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h3 class="main-title">Sifarişlər</h3>
+                <app-order-list></app-order-list>
+            </div>
+        </div>
+    </div>
+</section>
